src/objects/KaikakeData__c.object
<CustomObject>
    <fields>
        <fullName>DenpyoNo__c</fullName>
        <displayFormat>4{0000000}</displayFormat>
        <label>伝票番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KaikakeDataNameSanshutsu__c</fullName>
        <formula>LEFT(

 Shiiresaki__r.Name + &quot; &quot; +
 TEXT(  ShiharaiKijitsu__c  )  + &quot; 期日&quot;
 , 80

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_買掛データ名算出</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeikyukakuteiFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>支払完了フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShiharaiKanryobi__c</fullName>
        <label>支払完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShiharaiKijitsu__c</fullName>
        <formula>IF( Shiiresaki__r.Kijitsu__c = 99, 

IF(
    MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c+1&gt;12,
    DATE(YEAR(ShimeKikanMadeNamachi__c)+1,MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c+1-12,1),
    DATE(YEAR(ShimeKikanMadeNamachi__c)  ,MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c+1   ,1)
)-1
,
IF(
    MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c&gt;12,
    DATE(YEAR(ShimeKikanMadeNamachi__c)+1,MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c-12,Shiiresaki__r.Kijitsu__c),
    DATE(YEAR(ShimeKikanMadeNamachi__c)  ,MONTH(ShimeKikanMadeNamachi__c)+Shiiresaki__r.TorihikiSiteTsukisu__c   ,Shiiresaki__r.Kijitsu__c)
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>取引先マスタの取引債渡月数および期日と期日から自動算出。 

期日＝９９ 
　締期間まで＋取引債渡月数の月　の　最終日 

期日≠９９ 
　締期間まで＋取引債渡月数の月　の　期日</inlineHelpText>
        <label>支払期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shiiresaki__c</fullName>
        <label>支払先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>買掛データ</relationshipLabel>
        <relationshipName>KaikakeData_Shiiresaki</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShimeHizuke__c</fullName>
        <label>￥￥_締基準日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShimeKikanKaraNamachi__c</fullName>
        <label>￥￥_締期間から生値</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShimeKikanKara__c</fullName>
        <description>買掛データに集計される支払明細データの計上日範囲。

締日＝９９ 
　締基準日の月　の　同月　の　初日 

締日＜締基準日 
　締基準日の月　の　同月　の　締日＋１日 

締日≧締基準日 
　締基準日の月　の　前月　の　締日＋１日</description>
        <formula>IF(  Shiiresaki__r.Shimebi__c  = 99, 
 DATE( YEAR(ShimeHizuke__c), MONTH(ShimeHizuke__c), 1), 

    IF( Shiiresaki__r.Shimebi__c &lt; DAY( ShimeHizuke__c ),  
     DATE( YEAR(ShimeHizuke__c), MONTH(ShimeHizuke__c), Shiiresaki__r.Shimebi__c) + 1, 

        IF(
           MONTH(ShimeHizuke__c)==1,
           DATE(YEAR(ShimeHizuke__c)-1,12                                  ,Shiiresaki__r.Shimebi__c) + 1,
           DATE(YEAR(ShimeHizuke__c)  ,MONTH(ShimeHizuke__c)-1,Shiiresaki__r.Shimebi__c) + 1
        )

    )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>締期間から</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShimeKikanMadeNamachi__c</fullName>
        <description>締期間までを、ワークフロールールでコピー
支払期日を計算するため
数式の文字数5000制限</description>
        <label>￥￥_締期間まで生値</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShimeKikanMade__c</fullName>
        <description>買掛データに集計される支払明細データの計上日範囲。 

締日＝９９ 
　締期間から＋締期間月数の月－１ヶ月　の　最終日 

締日≠９９ 
　締期間から＋締期間月数の月　の　締日</description>
        <formula>IF( Shiiresaki__r.Shimebi__c = 99, 

    IF(
    MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c&gt;12,
    DATE(YEAR(ShimeKikanKaraNamachi__c)+1,MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c-12,1),
    DATE(YEAR(ShimeKikanKaraNamachi__c)  ,MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c   ,1)
    )-1
    ,
        IF(
        MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c&gt;12,
        DATE(YEAR(ShimeKikanKaraNamachi__c)+1,MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c-12,Shiiresaki__r.Shimebi__c),
        DATE(YEAR(ShimeKikanKaraNamachi__c)  ,MONTH(ShimeKikanKaraNamachi__c)+ShimekikanTsukisu__c   ,Shiiresaki__r.Shimebi__c)
        )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>締期間まで</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShimekikanTsukisu__c</fullName>
        <description>請求締期間月数に１未満が設定された場合の不具合の回避のため１未満は１とする。</description>
        <formula>IF (  Shiiresaki__r.ShimekikanTsukisu__c &gt;= 1, 
Shiiresaki__r.ShimekikanTsukisu__c , 
1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>取引先マスタの請求締期間月数が反映</inlineHelpText>
        <label>締期間月数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZeikomiShiharaiKei__c</fullName>
        <description>発注明細単位で税計算した結果の合計</description>
        <inlineHelpText>発注明細単位で税計算した結果の合計</inlineHelpText>
        <label>税込支払計</label>
        <summarizedField>ShiharaiMeisaiData__c.MeisaiZeikomi__c</summarizedField>
        <summaryForeignKey>ShiharaiMeisaiData__c.KaikakeData__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>買掛データ</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>DenpyoNo__c</columns>
        <columns>ShimeKikanKara__c</columns>
        <columns>ShimeKikanMade__c</columns>
        <columns>ShiharaiKijitsu__c</columns>
        <columns>ShiharaiKanryobi__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>View20160117a</fullName>
        <columns>NAME</columns>
        <columns>DenpyoNo__c</columns>
        <columns>ShimeKikanKara__c</columns>
        <columns>ShimeKikanMade__c</columns>
        <columns>ShiharaiKijitsu__c</columns>
        <columns>ShiharaiKanryobi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShiharaiKanryobi__c</field>
            <operation>equals</operation>
        </filters>
        <label>支払未完了</label>
    </listViews>
    <nameField>
        <label>支払名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>